code for training with the correction approach, created two notebooks for the simple example

--- a/examples/correction_qp_layer.ipynb
+++ b/examples/correction_qp_layer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "758d92cf",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patheffects as patheffects\n",
     "\n",
-    "from models import *"
+    "from examples.neural_net import *"
    ]
   },
   {
