robot navigation eg with qp incoprated training pipeline

--- a/examples/test_corrected_qplayer.ipynb
+++ b/examples/test_corrected_qplayer.ipynb
@@ -17,7 +17,7 @@
     "import wandb\n",
     "\n",
     "from src.neural_net import *\n",
-    "from src.models import *\n",
+    "from trainer import *\n",
     "from prb_def import *\n"
    ]
   },
