--- a/examples/test_incorporated_qplayer.ipynb
+++ b/examples/test_incorporated_qplayer.ipynb
@@ -5,7 +5,16 @@
    "execution_count": null,
    "id": "ad71911f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/x_lab/workspace/l2o/SS_Learning_MIQP_1/.venv/lib/python3.12/site-packages/diffcp/cone_program.py:212: SyntaxWarning: invalid escape sequence '\\i'\n",
+      "  s \\in K                            y \\in K^*\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -17,7 +26,7 @@
     "import wandb\n",
     "\n",
     "from src.neural_net import *\n",
-    "from src.models import *\n",
+    "from trainer import *\n",
     "from prb_def import *\n"
    ]
   },
@@ -114,33 +123,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[epoch 1 | step 1] validation: loss = 1.0445, obj_val = -60.7921, avg_opt_gap = 38.4097 percent, slack_pen = -0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.1150, \n",
-      "[epoch 1 | step 20] validation: loss = 1.2897, obj_val = -97.3615, avg_opt_gap = 1.3722 percent, slack_pen = 0.0000, y_sum_penalty = 0.0130, supervised_loss = 0.0120, \n",
-      "[epoch 1 | step 40] validation: loss = 0.4541, obj_val = -98.7045, avg_opt_gap = 0.0112 percent, slack_pen = 0.0000, y_sum_penalty = 0.0040, supervised_loss = 0.0100, \n",
-      "[epoch 1 | step 60] validation: loss = 0.1090, obj_val = -96.1942, avg_opt_gap = 2.5560 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0120, \n",
-      "[epoch 1 | step 80] validation: loss = 0.0658, obj_val = -97.4709, avg_opt_gap = 1.2610 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0073, \n",
-      "[epoch 1 | step 100] validation: loss = 0.0568, obj_val = -98.1501, avg_opt_gap = 0.5722 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0063, \n",
-      "[epoch 2 | step 120] validation: loss = 0.0749, obj_val = -97.5556, avg_opt_gap = 1.1768 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0082, \n",
-      "[epoch 2 | step 140] validation: loss = 0.0772, obj_val = -97.3233, avg_opt_gap = 1.4109 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0085, \n",
-      "[epoch 2 | step 160] validation: loss = 0.0590, obj_val = -97.6007, avg_opt_gap = 1.1293 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0065, \n",
-      "[epoch 2 | step 180] validation: loss = 0.0522, obj_val = -98.3654, avg_opt_gap = 0.3540 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0058, \n",
-      "[epoch 2 | step 200] validation: loss = 0.3247, obj_val = -98.9824, avg_opt_gap = -0.2696 percent, slack_pen = 0.0000, y_sum_penalty = 0.0030, supervised_loss = 0.0058, \n",
-      "[epoch 3 | step 220] validation: loss = 0.1090, obj_val = -95.3221, avg_opt_gap = 3.4369 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0120, \n",
-      "[epoch 3 | step 240] validation: loss = 0.4178, obj_val = -85.8479, avg_opt_gap = 13.0360 percent, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0360, \n",
-      "[epoch 3 | step 260] validation: loss = 0.2021, obj_val = -98.0848, avg_opt_gap = 0.6408 percent, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0123, \n",
-      "[epoch 3 | step 280] validation: loss = 0.0749, obj_val = -98.0671, avg_opt_gap = 0.6550 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0082, \n",
-      "[epoch 3 | step 300] validation: loss = 0.0772, obj_val = -96.7736, avg_opt_gap = 1.9669 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0085, \n",
+      "[epoch 1 | step 1] validation: loss = 1.0445, obj_val = -60.7921, opt_gap = 38.4097 %, slack_pen = -0.0000, y_penalty = 0.0000, supervised_loss = 0.1150, \n",
+      "[epoch 1 | step 20] validation: loss = 1.2897, obj_val = -97.3615, opt_gap = 1.3722 %, slack_pen = 0.0000, y_penalty = 0.0130, supervised_loss = 0.0120, \n",
+      "[epoch 1 | step 40] validation: loss = 0.4541, obj_val = -98.7045, opt_gap = 0.0112 %, slack_pen = 0.0000, y_penalty = 0.0040, supervised_loss = 0.0100, \n",
+      "[epoch 1 | step 60] validation: loss = 0.1090, obj_val = -96.1942, opt_gap = 2.5560 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0120, \n",
+      "[epoch 1 | step 80] validation: loss = 0.0658, obj_val = -97.4709, opt_gap = 1.2610 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0073, \n",
+      "[epoch 1 | step 100] validation: loss = 0.0568, obj_val = -98.1501, opt_gap = 0.5722 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0063, \n",
+      "[epoch 2 | step 120] validation: loss = 0.0749, obj_val = -97.5556, opt_gap = 1.1768 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0082, \n",
+      "[epoch 2 | step 140] validation: loss = 0.0772, obj_val = -97.3233, opt_gap = 1.4109 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0085, \n",
+      "[epoch 2 | step 160] validation: loss = 0.0590, obj_val = -97.6007, opt_gap = 1.1293 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0065, \n",
+      "[epoch 2 | step 180] validation: loss = 0.0522, obj_val = -98.3654, opt_gap = 0.3540 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0058, \n",
+      "[epoch 2 | step 200] validation: loss = 0.3247, obj_val = -98.9824, opt_gap = -0.2696 %, slack_pen = 0.0000, y_penalty = 0.0030, supervised_loss = 0.0058, \n",
+      "[epoch 3 | step 220] validation: loss = 0.1090, obj_val = -95.3221, opt_gap = 3.4369 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0120, \n",
+      "[epoch 3 | step 240] validation: loss = 0.4178, obj_val = -85.8479, opt_gap = 13.0360 %, slack_pen = 0.0000, y_penalty = 0.0010, supervised_loss = 0.0360, \n",
+      "[epoch 3 | step 260] validation: loss = 0.2021, obj_val = -98.0848, opt_gap = 0.6408 %, slack_pen = 0.0000, y_penalty = 0.0010, supervised_loss = 0.0123, \n",
+      "[epoch 3 | step 280] validation: loss = 0.0749, obj_val = -98.0671, opt_gap = 0.6550 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0082, \n",
+      "[epoch 3 | step 300] validation: loss = 0.0772, obj_val = -96.7736, opt_gap = 1.9669 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0085, \n",
       "Learning rate updated: 0.001000 -> 0.000500\n",
-      "[epoch 4 | step 320] validation: loss = 0.6971, obj_val = -98.9309, avg_opt_gap = -0.2187 percent, slack_pen = 0.0000, y_sum_penalty = 0.0070, supervised_loss = 0.0068, \n",
-      "[epoch 4 | step 340] validation: loss = 0.1090, obj_val = -95.7469, avg_opt_gap = 3.0056 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0120, \n",
-      "[epoch 4 | step 360] validation: loss = 0.1453, obj_val = -98.0960, avg_opt_gap = 0.6286 percent, slack_pen = 0.0000, y_sum_penalty = 0.0010, supervised_loss = 0.0060, \n",
-      "[epoch 4 | step 380] validation: loss = 0.0409, obj_val = -98.4181, avg_opt_gap = 0.3010 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0045, \n",
-      "[epoch 4 | step 400] validation: loss = 0.0749, obj_val = -97.2462, avg_opt_gap = 1.4873 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0082, \n",
-      "[epoch 5 | step 420] validation: loss = 0.0590, obj_val = -97.9222, avg_opt_gap = 0.8017 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0065, \n",
-      "[epoch 5 | step 440] validation: loss = 0.0545, obj_val = -97.4221, avg_opt_gap = 1.3065 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0060, \n",
-      "[epoch 5 | step 460] validation: loss = 0.0568, obj_val = -97.4797, avg_opt_gap = 1.2517 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0063, \n",
-      "[epoch 5 | step 480] validation: loss = 0.0431, obj_val = -98.4000, avg_opt_gap = 0.3205 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0048, \n",
-      "[epoch 5 | step 500] validation: loss = 0.0590, obj_val = -97.3550, avg_opt_gap = 1.3771 percent, slack_pen = 0.0000, y_sum_penalty = 0.0000, supervised_loss = 0.0065, \n",
+      "[epoch 4 | step 320] validation: loss = 0.6971, obj_val = -98.9309, opt_gap = -0.2187 %, slack_pen = 0.0000, y_penalty = 0.0070, supervised_loss = 0.0068, \n",
+      "[epoch 4 | step 340] validation: loss = 0.1090, obj_val = -95.7469, opt_gap = 3.0056 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0120, \n",
+      "[epoch 4 | step 360] validation: loss = 0.1453, obj_val = -98.0960, opt_gap = 0.6286 %, slack_pen = 0.0000, y_penalty = 0.0010, supervised_loss = 0.0060, \n",
+      "[epoch 4 | step 380] validation: loss = 0.0409, obj_val = -98.4181, opt_gap = 0.3010 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0045, \n",
+      "[epoch 4 | step 400] validation: loss = 0.0749, obj_val = -97.2462, opt_gap = 1.4873 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0082, \n",
+      "[epoch 5 | step 420] validation: loss = 0.0590, obj_val = -97.9222, opt_gap = 0.8017 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0065, \n",
+      "[epoch 5 | step 440] validation: loss = 0.0545, obj_val = -97.4221, opt_gap = 1.3065 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0060, \n",
+      "[epoch 5 | step 460] validation: loss = 0.0568, obj_val = -97.4797, opt_gap = 1.2517 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0063, \n",
+      "[epoch 5 | step 480] validation: loss = 0.0431, obj_val = -98.4000, opt_gap = 0.3205 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0048, \n",
+      "[epoch 5 | step 500] validation: loss = 0.0590, obj_val = -97.3550, opt_gap = 1.3771 %, slack_pen = 0.0000, y_penalty = 0.0000, supervised_loss = 0.0065, \n",
       "Learning rate updated: 0.000500 -> 0.000250\n"
      ]
     }
@@ -188,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "penn_env312",
+   "display_name": "SS_Learning_MIQP_1 (3.12.11)",
    "language": "python",
    "name": "python3"
   },
