--- a/energy/data_collection.ipynb
+++ b/energy/data_collection.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "9ffcffa5",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "09fd01e8",
    "metadata": {},
    "outputs": [],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "f1035734",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,13 @@
       "Presolve removed 104 rows and 56 columns\n",
       "Presolve time: 0.00s\n",
       "Presolved: 166 rows, 238 columns, 449 nonzeros\n",
-      "Presolved model has 238 quadratic objective terms\n",
+      "Presolved model has 238 quadratic objective terms\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found heuristic solution: objective 1180909.9498\n",
       "Variable types: 214 continuous, 24 integer (0 binary)\n",
       "\n",
@@ -438,11 +444,23 @@
     "print(\"delta:\", sol[\"delta\"])\n",
     "print(\"u[0]:\", sol[\"u\"][0], \"x[0]:\", sol[\"x\"][0], \"x[N]:\", sol[\"x\"][-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0486a8b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Objective: 152.22724582143286\n",
+    "delta: [2 2 2 2 1 1 2 2 2 3 2 2 2 1 1 1 1 0 0 0 0 0 0 0]\n",
+    "u[0]: [4.79681432 0.50044853] x[0]: [2. 1.] x[N]: [2.36068082 1.68389984]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SS_Learning_MIQP_1",
+   "display_name": "penn_env312",
    "language": "python",
    "name": "python3"
   },
